--- a/ui/package.json
+++ b/ui/package.json
@@ -16,7 +16,7 @@
     "typescript": "^4.4.2"
   },
   "scripts": {
-    "start": "export PORT=3001 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
