--- a/api/package.json
+++ b/api/package.json
@@ -7,9 +7,12 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "4.13.0",
+    "@types/crypto-js": "^4.1.1",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "prisma": "^4.13.0"
+    "prisma": "^4.13.0",
+    "shared": "1.0.0"
   },
   "scripts": {
     "build": "tsc --project ./",
