--- a/api/package.json
+++ b/api/package.json
@@ -11,8 +11,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "prisma": "^4.13.0",
-    "shared": "1.0.0"
+    "prisma": "^4.13.0"
   },
   "scripts": {
     "build": "tsc --project ./",
