--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,9 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "4.13.0",
+    "@types/cors": "^2.8.13",
     "@types/crypto-js": "^4.1.1",
+    "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
