--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
     "@types/cors": "^2.8.13",
     "@types/crypto-js": "^4.1.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
