--- a/api/package.json
+++ b/api/package.json
@@ -9,11 +9,13 @@
     "@prisma/client": "4.13.0",
     "@types/cors": "^2.8.13",
     "@types/crypto-js": "^4.1.1",
+    "@types/luxon": "^3.3.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "luxon": "^3.3.0",
     "prisma": "^4.13.0"
   },
   "scripts": {
@@ -27,5 +29,8 @@
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
