--- a/api/package.json
+++ b/api/package.json
@@ -19,9 +19,9 @@
     "prisma": "^4.13.0"
   },
   "scripts": {
-    "build": "tsc --project ./",
+    "build": "rm -rf ./dist && tsc --project ./",
     "dev": "nodemon --config nodemon.json",
-    "prod": "node dist/app.ts"
+    "prod": "node dist/app.js"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
